2009-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* src/libassuan.vers, src/libassuan.def: Update to new API.
	* assuan.c, context.c, system.c, debug.c: New files.
	* Makefile.am (common_sources): Add assuan.c, context.c, system.c
	and debug.c.
	* assuan.h: Include <stdarg.h>.  Fix inclusion of <gpg-error.h>.
	(_ASSUAN_EXT_SYM_PREFIX, _ASSUAN_PREFIX1, _ASSUAN_PREFIX2)
	(_ASSUAN_PREFIX): Remove support for renaming the whole library,
	now that we have a stable shared library interface that can evolve
	to cover all needs (particularly those of GPGME).
	(assuan_malloc_hooks, assuan_malloc_hooks_t, assuan_log_cb_t)
	(assuan_io_monitor_t): New types.
	(ASSUAN_LOG_INIT, ASSUAN_LOG_CTX, ASSUAN_LOG_ENGINE)
	(ASSUAN_LOG_DATA, ASSUAN_LOG_SYSIO, ASSUAN_IO_FROM_PEER)
	(ASSUAN_IO_TO_PEER, ASSUAN_IO_MONITOR_NOLOG)
	(ASSUAN_IO_MONITOR_IGNORE): New symbols.
	(assuan_set_gpg_err_source, assuan_get_gpg_err_source)
	(assuan_get_malloc_hooks, assuan_set_log_cb, assuan_get_log_cb)
	(assuan_new, assuan_new_ext, assuan_release): New function
	prototypes.
	(assuan_init_pipe_server, assuan_init_socket_server)
	(assuan_init_socket_server_ext, assuan_pipe_connect)
	(assuan_pipe_connect_ext, assuan_socket_connect)
	(assuan_socket_connect_ext): Take a context argument instead of
	pointer to context.
	(assuan_deinit_server, assuan_disconnect)
	(assuan_set_assuan_err_source): Remove function prototypes.
	* assuan-defs.h (ASSUAN_GCC_A_PURE): Moved here from XXX
	(_assuan_error): New macro.
	(struct assuan_context_s): New members err_source, w32_strerror,
	malloc_hooks, log_cb, log_cb_data: New members.  Move confidential
	into flags.  New member engine.
	(_assuan_log_handler, _assuan_error_default, _assuan_disconnect):
	New prototypes.
	(_assuan_new_context): Remove prototype.
	(_assuan_malloc, _assuan_calloc, _assuan_realloc, _assuan_free):
	Add context argument to prototype.
	* assuan-util.c (alloc_func, realloc_func, free_func): Remove
	global variables.