@@ -1,3 +1,7 @@
+2009-09-29  Werner Koch  <wk@g10code.com>
+
+	* assuan.c (assuan_release): Allow passing a NULL ctx.
+
 2009-09-19  Marcus Brinkmann  <marcus@g10code.de>
 
 	* src/libassuan.vers, src/libassuan.def: Update to new API.
